# aethersx2

./: CMakeLists.txt
.github/workflows/: ios-build.yml  ios.yml
cmake/: BuildParameters.cmake  Pcsx2Utils.cmake  SearchForStuff.cmake  TargetArch.cmake
common/: Assertions.h  CMakeLists.txt  Pcsx2Defs.h  PrecompiledHeader.h
pcsx2/: CMakeLists.txt
